--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="hero-image">
                     <div class="image-container">
-                        <img src="D:\code\html\portfolio\ebratul.jpg" alt="Ebratul Shaharier" />
+                        <img src="ebratul.jpg" alt="Ebratul Shaharier" />
                     </div>
                 </div>
             </div>
