--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <div class="portfolio-grid">
                 <div class="portfolio-item">
                     <div class="portfolio-image">
-                        <img src="D:\code\html\portfolio\blood.jpg">
+                        <img src="blood.jpg">
                     </div>
                     <div class="portfolio-content">
                         <h3>Blood Donation Flutter App</h3>
